<resources>
    <string name="app_name">Умница</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ok">OK</string>
    <string name="molodets">Молодец!</string>
    <string name="level">Уровень</string>
    <string name="cancel">Cancel</string>
    <string name="whatisyourname">Как тебя зовут?</string>
    <string name="refresh">refresh</string>
    <string name="back">back</string>
    <string name="confirm_end_round">Закончить раунд?</string>
    <string name="solve">РЕШАТЬ</string>
    <string name="stat">Статистика</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
</resources>