<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a4_game_background"
    tools:context=".ui.fragment.GameFragment">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:gravity="center_vertical|start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/counters"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:importantForAccessibility="no"
            android:src="@drawable/a4_arrow_back" />

        <TextView
            android:id="@+id/textView_Game_levelName"
            style="@style/a4_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            tools:text="C-1" />

        <ru.mamsikgames.smartkid.ui.util.CustomProgressBar
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|start"
            app:bgColor="@color/a4_transparent_white_65"
            android:layout_marginHorizontal="18dp"
            app:bgCornerRadius="8dp"
            app:borderColor="@color/a4_cian"
            app:borderWidth="2dp"
            app:progressColor="@color/a4_cian"
            app:progressCornerRadius="4dp"
            app:progressPadding="4dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/counters"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:gravity="center_vertical|end"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:importantForAccessibility="no"
            android:src="@drawable/a4_icon_wrong" />

        <TextView
            android:id="@+id/wrong_counter"
            style="@style/a4_counter_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="6dp"
            tools:text="33" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="12dp"
            android:importantForAccessibility="no"
            android:src="@drawable/a4_icon_correct" />

        <TextView
            android:id="@+id/correct_counter"
            style="@style/a4_counter_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="6dp"
            tools:text="99" />
    </LinearLayout>


    <TextView
        android:id="@+id/task"
        style="@style/a4_task_style"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/a4_bg_task"
        android:gravity="center_vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        tools:text="3+5=" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task">

        <TextView
            android:id="@+id/button01"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_1" />

        <TextView
            android:id="@+id/button02"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_2" />

        <TextView
            android:id="@+id/button03"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_3" />

        <TextView
            android:id="@+id/button04"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_4" />

        <TextView
            android:id="@+id/button05"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_5" />

        <TextView
            android:id="@+id/button06"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_6" />

        <TextView
            android:id="@+id/button07"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_7" />

        <TextView
            android:id="@+id/button08"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_8" />

        <TextView
            android:id="@+id/button09"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_9" />

        <TextView
            android:id="@+id/button00"
            style="@style/a4_number_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/a4_bg_number_button"
            android:gravity="center"
            android:text="@string/_0" />

        <ImageView
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:layout_columnSpan="2"
            android:layout_margin="8dp"
            android:src="@drawable/a4_btn_enter_inactive"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_erase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/a4_btn_erase_inactive"
            tools:ignore="ContentDescription" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>