<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_transparent"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/bg_transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/imageView_bgDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/bg_dialog_small"

        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toTopOf="@+id/imageView_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_transparent"
        app:layout_constraintStart_toStartOf="@+id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_transparent"/>

    <ImageView
        android:id="@+id/imageView_Cancel"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/btn_cancel"

        app:layout_constraintTop_toTopOf="@+id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/NormalTextStyleBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/whatisyourname"
        app:layout_constraintTop_toTopOf="@+id/imageView_bgDialog"
        app:layout_constraintStart_toStartOf="@+id/imageView_bgDialog"
        app:layout_constraintEnd_toEndOf="@+id/imageView_bgDialog"/>

    <EditText
        android:id="@+id/textView_AddUser_userName"
        style="@style/OutlinedTextStyleRubik_active"
        android:layout_width="match_parent"
        android:layout_height="68sp"
        android:layout_marginTop="120dp"
        android:background="@android:color/transparent"
        android:importantForAutofill="no"
        tools:text="Аня"
        android:textSize="46sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/imageView_bgDialog"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/imageView_Ok"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:contentDescription="@string/ok"
        app:srcCompat="@drawable/btn_ok_blank"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_transparent"
        app:layout_constraintStart_toStartOf="@id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="@id/imageView_transparent"/>

    <ru.mamsikgames.smartkid.ui.TextViewOutline
        android:id="@+id/textView_Ok"
        style="@style/OutlinedButtonStyle2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"

        app:layout_constraintTop_toTopOf="@id/imageView_Ok"
        app:layout_constraintBottom_toBottomOf="@id/imageView_Ok"
        app:layout_constraintStart_toStartOf="@id/imageView_Ok"
        app:layout_constraintEnd_toEndOf="@id/imageView_Ok"
        />


</androidx.constraintlayout.widget.ConstraintLayout>