<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_transparent"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/bg_transparent"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/imageView_bgDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/bg_dialog_big"

        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toTopOf="@+id/imageView_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_transparent"
        app:layout_constraintStart_toStartOf="@+id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_transparent"/>

    <ImageView
        android:id="@+id/imageView_Cancel"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/btn_cancel"

        app:layout_constraintTop_toTopOf="@+id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageView_Ok"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:contentDescription="@string/ok"
        app:srcCompat="@drawable/btn_ok_blank"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_transparent"
        app:layout_constraintStart_toStartOf="@id/imageView_transparent"
        app:layout_constraintEnd_toEndOf="@id/imageView_transparent"/>

    <ru.mamsikgames.smartkid.ui.TextViewOutline
        android:id="@+id/textView_Ok"
        style="@style/OutlinedButtonStyle2"
        android:textSize="24sp"
        android:layout_width="160dp"
        android:layout_height="30sp"
        android:text="@string/molodets"

        app:layout_constraintTop_toTopOf="@id/imageView_Ok"
        app:layout_constraintBottom_toBottomOf="@id/imageView_Ok"
        app:layout_constraintStart_toStartOf="@id/imageView_Ok"
        app:layout_constraintEnd_toEndOf="@id/imageView_Ok"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/imageView_Ok"
        app:layout_constraintEnd_toEndOf="@id/imageView_bgDialog"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/imageView_bgDialog"
        app:layout_constraintTop_toTopOf="@id/imageView_bgDialog"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/level" />

            <ru.mamsikgames.smartkid.ui.TextViewOutline
                android:id="@+id/textView_Results_Level"
                style="@style/OutlinedTextStyleLevels"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                tools:text="C-1" />

            <TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:text="Задач" />

            <ru.mamsikgames.smartkid.ui.TextViewOutline
                android:id="@+id/textView_Results_NumCorrect"
                style="@style/OutlinedTextStyleLevels"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                tools:text="56" />



            <!--TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:text="Результат" />

            <LinearLayout
                android:id="@+id/ll_Results_Success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ru.mamsikgames.smartkid.ui.TextViewOutline
                    android:id="@+id/textView_Results_Success"
                    style="@style/OutlinedTextStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="30sp"
                    tools:text="50" />

                <ru.mamsikgames.smartkid.ui.TextViewOutline
                    style="@style/OutlinedTextStyle"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5sp"
                    android:text="/"
                    android:textSize="30sp" />

                <ru.mamsikgames.smartkid.ui.TextViewOutline
                    android:id="@+id/textView_Results_Fails"
                    style="@style/OutlinedTextStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5sp"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    tools:text="30" />

                <ru.mamsikgames.smartkid.ui.TextViewOutline
                    style="@style/OutlinedTextStyle"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5sp"
                    android:text="/"
                    android:textSize="30sp" />

                <ru.mamsikgames.smartkid.ui.TextViewOutline
                    android:id="@+id/textView_Results_Tries"
                    style="@style/OutlinedTextStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5sp"
                    android:textColor="@color/orange_yellow"
                    android:textSize="30sp"
                    tools:text="70" />

            </LinearLayout-->

            <TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:text="Ошибок" />

            <ru.mamsikgames.smartkid.ui.TextViewOutline
                android:id="@+id/textView_Results_NumWrong"
                style="@style/OutlinedTextStyleLevels"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                tools:text="26" />



            <ImageView
                android:id="@+id/imageView_Results_Badge"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="22dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/badge_1" />



            <TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Длительность" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_Results_TimeStart"
                    style="@style/NormalTextStyleBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="15.01.2023 10:00" />

                <TextView
                    style="@style/NormalTextStyleBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text=" - " />

                <TextView
                    android:id="@+id/textView_Results_TimeFinish"
                    style="@style/NormalTextStyleBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="15.01.2023 10:15" />

            </LinearLayout>

            <ru.mamsikgames.smartkid.ui.TextViewOutline
                android:id="@+id/textView_Results_Duration"
                style="@style/OutlinedTextStyleRubik_active"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                tools:text="56 мин" />

            <TextView
                style="@style/NormalTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="Выходов" />

            <ru.mamsikgames.smartkid.ui.TextViewOutline
                android:id="@+id/textView_Results_Exits"
                style="@style/OutlinedTextStyleLevels"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                tools:text="2" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>